--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="container">
-
-
+    <main class="container">
       <div class="card">
         <img src="/images/icon-sedans.svg" alt="" />
         <h1>Sedans</h1>
@@ -29,23 +27,25 @@
         <a href="#" class="cars">Learn More</a>
       </div>
 
-
       <div class="card">
         <img src="/images/icon-suvs.svg" alt="" />
         <h1>Suvs</h1>
-        <p>Take an SUV for its spacious interior, power, and versatility. 
-          Perfect for your next family vacation and off-road adventures.</p>
+        <p>
+          Take an SUV for its spacious interior, power, and versatility. Perfect
+          for your next family vacation and off-road adventures.
+        </p>
         <a href="#" class="suvs">Learn More</a>
       </div>
-
 
       <div class="card">
         <img src="/images/icon-luxury.svg" alt="" />
         <h1>Luxury</h1>
-        <p>Cruise in the best car brands without the bloated prices. 
-          Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+        <p>
+          Cruise in the best car brands without the bloated prices. Enjoy the
+          enhanced comfort of a luxury rental and arrive in style.
+        </p>
         <a href="#" class="luxury">Learn More</a>
       </div>
-
+    </main>
   </body>
 </html>
